src/objects/Zuora__ZInvoice__c.object
<CustomObject>
    <description>Zuora Invoice object. Invoices are bills that you send to customers.</description>
    <fields>
        <fullName>Acc_Owner__c</fullName>
        <formula>Zuora__Account__r.Owner.FirstName &amp;&apos; &apos;&amp;  Zuora__Account__r.Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Email__c</fullName>
        <formula>Zuora__BillingAccount__r.Zuora__BillToWorkEmail__c</formula>
        <label>Bill To Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bill_To_Contact_Name__c</fullName>
        <description>Refer SF-1172 Documentation</description>
        <formula>Zuora__BillingAccount__r.Zuora__BillToName__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bill To Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CES_Migration_Data__c</fullName>
        <description>When Invoices are migrated over from CES this field is used to capture pertinent data. (SF-1560)</description>
        <label>CES Migration Data</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Past_Due__c</fullName>
        <formula>TODAY() - Zuora__DueDate__c</formula>
        <label>Past Due</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Promise_To_Pay_Amount__c</fullName>
        <label>Promise to Pay Amount</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Promise_to_Pay_Date__c</fullName>
        <label>Promise to Pay Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The CRM account that the invoice is associated to.</description>
        <inlineHelpText>The CRM account that the invoice is associated to.</inlineHelpText>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__AdjustmentAmount__c</fullName>
        <description>The currency amount of the adjustment applied to the invoice.</description>
        <inlineHelpText>The currency amount of the adjustment applied to the invoice.</inlineHelpText>
        <label>Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Age_Bucket__c</fullName>
        <description>Age Buckets for Aging Reports</description>
        <formula>IF(Zuora__Balance2__c &lt;= 0, NULL,
IF(TODAY() - Zuora__DueDate__c &lt;= 0, &quot;On Time&quot;,
IF(TODAY() - Zuora__DueDate__c &lt;= 30, &quot;1-30&quot;,
IF(TODAY() - Zuora__DueDate__c &lt;= 60, &quot;31-60&quot;,
IF(TODAY() - Zuora__DueDate__c &lt;= 90, &quot;61-90&quot;, &quot;91-&quot;)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Age Buckets for Aging Reports</inlineHelpText>
        <label>Age Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__AmountWithoutTax__c</fullName>
        <description>The total of the invoice before any taxes are applied.</description>
        <inlineHelpText>The total of the invoice before any taxes are applied.</inlineHelpText>
        <label>Amount Without Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Balance2__c</fullName>
        <description>The balance due on the invoice after the value for the Amount field is applied.</description>
        <inlineHelpText>The balance due on the invoice after the value for the Amount field is applied.</inlineHelpText>
        <label>Balance</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__Balance__c</fullName>
        <description>Zuora Invoice Balance.  This field is deprecated.</description>
        <inlineHelpText>Zuora Invoice Balance.  This field is deprecated.</inlineHelpText>
        <label>Balance (Deprecated)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__BillToId__c</fullName>
        <description>zuora bill to contact id</description>
        <label>Bill To Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__BillingAccount__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <description>The Zuora billing account that the invoice is for.</description>
        <inlineHelpText>The Zuora billing account that the invoice is for.</inlineHelpText>
        <label>Billing Account</label>
        <referenceTo>Zuora__CustomerAccount__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>ZInvoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__CreditBalanceAdjustmentAmount__c</fullName>
        <description>The currency amount of the adjustment applied to the customer&apos;s credit balance.</description>
        <label>Credit Balance Adjustment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Zuora__Description__c</fullName>
        <description>Invoice Description.</description>
        <inlineHelpText>Invoice Description.</inlineHelpText>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zuora__DueDate__c</fullName>
        <description>The date by which the payment for this invoice is due.</description>
        <inlineHelpText>The date by which the payment for this invoice is due.</inlineHelpText>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__External_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field holds the Zuora object ID, and is used as external ID for data synchronization between Salesforce and Zuora.</inlineHelpText>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Zuora__GeneratedDate__c</fullName>
        <label>Generated On Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Generated_Date__c</fullName>
        <label>Generated On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__InvoiceDate__c</fullName>
        <description>The generation date of the invoice.</description>
        <inlineHelpText>The generation date of the invoice.</inlineHelpText>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentAmount__c</fullName>
        <description>The amount of payments applied to the invoice.</description>
        <inlineHelpText>The amount of payments applied to the invoice.</inlineHelpText>
        <label>Payment Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__PaymentTerm__c</fullName>
        <description>The payment term of the associated billing account.</description>
        <inlineHelpText>The payment term of the associated billing account.</inlineHelpText>
        <label>Payment Term</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Payment_Term__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Term</label>
        <referenceTo>Zuora__PaymentTerm__c</referenceTo>
        <relationshipLabel>Invoices</relationshipLabel>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Zuora__PostedDate__c</fullName>
        <description>The date when the invoice was posted.</description>
        <inlineHelpText>The date when the invoice was posted.</inlineHelpText>
        <label>Posted On Date (Deprecated)</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__Posted_Date__c</fullName>
        <description>The date when the invoice was posted.</description>
        <inlineHelpText>The date when the invoice was posted.</inlineHelpText>
        <label>Posted On Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Zuora__RefundedAmount__c</fullName>
        <description>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</description>
        <inlineHelpText>Specifies the amount of a refund that applied against a payment on an earlier the invoice.</inlineHelpText>
        <label>Refunded Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__SoldToId__c</fullName>
        <description>zuora sold to contact id</description>
        <label>Sold To Contact Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Status__c</fullName>
        <description>The status of the invoice in the system. This status is not the status of the payment of the invoice, just the status of the invoice itself.</description>
        <inlineHelpText>The status of the invoice in the system. This status is not the status of the payment of the invoice, just the status of the invoice itself.</inlineHelpText>
        <label>Status</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__TargetDate__c</fullName>
        <description>The date you want the invoice generated on.</description>
        <inlineHelpText>The date you want the invoice generated on.</inlineHelpText>
        <label>Target Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxAmount__c</fullName>
        <description>The total amount of the taxes applied to the invoice.</description>
        <inlineHelpText>The total amount of the taxes applied to the invoice.</inlineHelpText>
        <label>Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TaxExemptAmount__c</fullName>
        <description>The total amount of the invoice that is exempt from taxation.</description>
        <inlineHelpText>The total amount of the invoice that is exempt from taxation.</inlineHelpText>
        <label>Tax Exempt Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__TotalAmount__c</fullName>
        <description>The amount of the invoice.</description>
        <inlineHelpText>The amount of the invoice.</inlineHelpText>
        <label>Total Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Zuora__ZuoraId__c</fullName>
        <description>The Invoice ID in the Zuora system.</description>
        <inlineHelpText>The Invoice ID in the Zuora system.</inlineHelpText>
        <label>Invoice ID</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zuora__Zuora_Id__c</fullName>
        <description>The Zuora ID of the invoice.</description>
        <inlineHelpText>The Zuora ID of the invoice.</inlineHelpText>
        <label>Zuora Id</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <label>Invoice</label>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Zuora__All</fullName>
        <columns>NAME</columns>
        <columns>Zuora__Status__c</columns>
        <columns>Zuora__Balance2__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>PromiseToPay_cannot_be_lesser_than_Today</fullName>
        <active>true</active>
        <description>Promise to pay date cannot be lesser than today!</description>
        <errorConditionFormula>Promise_to_Pay_Date__c &lt;= TODAY()</errorConditionFormula>
        <errorDisplayField>Promise_to_Pay_Date__c</errorDisplayField>
        <errorMessage>Promise to pay date cannot be less than or equal to today!</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Required_Field_Rule_for_Promise_to_Pay</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(AND(NOT(ISNULL(Promise_to_Pay_Date__c )), OR(ISNULL(Promise_To_Pay_Amount__c),Promise_To_Pay_Amount__c = 0)) , 
AND(ISNULL(Promise_to_Pay_Date__c),NOT(ISNULL(Promise_To_Pay_Amount__c)),Promise_To_Pay_Amount__c &gt; 0)), true, false)</errorConditionFormula>
        <errorMessage>Please ensure a promise to pay date has been entered and it is greater than today and the promise to pay amount is equal to the amount owed on the invoice. Note:The invoice outstanding balance must have a value greater than $0 in order to assign a promise</errorMessage>
    </validationRules>
</CustomObject>